<?xml version="1.0" encoding="utf-8"?>

<!--lineLayout sirve para organizar las cosas linealmente
la propiedad orientacion me dice como quiero organizar las palabras, si pongo vertical
aparece de arriba hacia abajo, si pongo horizontal aparece una seguida del otro,
siempre especificamos vetial y alto
para rear un archivo de string solo es darle una direccion que yo quiera, luego
bombillo rojo y creo el archivo. SE modifica el nombre que no está en comillas
texcolor modifica el color de la letra
para centrar textos layout_gravity
margenes con layout_margin,si pongo eso en el linear layout margen
hint sirve para poder una letra en gris en los texview
realtivelayout se carga lo que uno hace con linelayout es en base a otro componente que se pone
table laout organiza organizatodo en tablas el rpoblema es que toma el tamaño del mas grande
con 1 y 0dp se puede modificar elancho y el largo para que se distribuya equitativamente esto
se puede modificar como quiera como por ejemplo de 0 a 100 o de 0 a 1 en weight

-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.alejoaj.sesion1interfaces.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:gravity="center_vertical|center_horizontal"
            android:textColor= "@color/black"
            android:textSize = "25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nombre"
                android:textColor= "@color/black"
                android:textSize = "25sp"
                android:id="@+id/textView"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:id="@+id/eNombre" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor= "@color/black"
                android:text="@string/apellido"
                android:textSize = "25sp"
                android:gravity="center"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:id="@+id/eApellido"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor= "@color/black"
                android:text="@string/celular"
                android:textSize = "25sp"
                android:gravity="center"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/celular"

                android:id="@+id/eCelular"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor= "@color/black"
                android:text="@string/email"
                android:textSize = "25sp"
                android:gravity="center"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:id="@+id/eEmail"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor= "@color/black"
                android:text="@string/Ciudad"
                android:textSize = "25sp"
                android:gravity="center"/>
            <Spinner
                android:id="@+id/sCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox android:id="@+id/cCine"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cine"
                android:onClick="onCheckboxClicked"
                />
            <CheckBox android:id="@+id/cComida"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/comer"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/cMusica"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/musica"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/cDeporte"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/deporte"
                android:onClick="onCheckboxClicked"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textColor="@color/black"
                android:background="@color/green"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/bResgistrar"
                android:onClick="Registrar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/red"
                android:textSize="20dp"
                android:id="@+id/tinfo"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
